--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>10</y>
+      <y>0</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -57,16 +57,15 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset theme="forward">
-      <normaloff/>
-     </iconset>
+     <iconset resource="res.qrc">
+      <normaloff>:/icons/accept.png</normaloff>:/icons/accept.png</iconset>
     </property>
    </widget>
    <widget class="QLineEdit" name="urlEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>0</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -91,7 +90,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>10</y>
+      <y>0</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -100,18 +99,17 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset theme="stop">
-      <normaloff/>
-     </iconset>
+     <iconset resource="res.qrc">
+      <normaloff>:/icons/stop.png</normaloff>:/icons/stop.png</iconset>
     </property>
    </widget>
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>-10</y>
+      <y>30</y>
       <width>281</width>
-      <height>20</height>
+      <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -268,9 +266,8 @@ background-color:transparent;
       <string/>
      </property>
      <property name="icon">
-      <iconset theme="media-floppy">
-       <normaloff/>
-      </iconset>
+      <iconset resource="res.qrc">
+       <normaloff>:/icons/script_save.png</normaloff>:/icons/script_save.png</iconset>
      </property>
     </widget>
     <widget class="QPushButton" name="loadSettings">
@@ -292,9 +289,8 @@ background-color:transparent;
       <string/>
      </property>
      <property name="icon">
-      <iconset theme="down">
-       <normaloff/>
-      </iconset>
+      <iconset resource="res.qrc">
+       <normaloff>:/icons/cog.png</normaloff>:/icons/cog.png</iconset>
      </property>
     </widget>
    </widget>
@@ -356,7 +352,9 @@ background-color:transparent;
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionExit</sender>
