--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>302</width>
-    <height>265</height>
+    <height>285</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>302</width>
-    <height>265</height>
+    <height>285</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>302</width>
-    <height>265</height>
+    <height>285</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>0</y>
+      <y>10</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -65,7 +65,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>10</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -90,7 +90,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>0</y>
+      <y>10</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -107,7 +107,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>50</y>
       <width>281</width>
       <height>16</height>
      </rect>
@@ -128,7 +128,7 @@ background-color:transparent;
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
+      <y>70</y>
       <width>281</width>
       <height>181</height>
      </rect>
@@ -239,7 +239,7 @@ background-color:transparent;
       <rect>
        <x>20</x>
        <y>140</y>
-       <width>161</width>
+       <width>241</width>
        <height>21</height>
       </rect>
      </property>
@@ -250,9 +250,9 @@ background-color:transparent;
     <widget class="QPushButton" name="saveSettings">
      <property name="geometry">
       <rect>
-       <x>240</x>
+       <x>230</x>
        <y>0</y>
-       <width>21</width>
+       <width>31</width>
        <height>24</height>
       </rect>
      </property>
@@ -273,9 +273,9 @@ background-color:transparent;
     <widget class="QPushButton" name="loadSettings">
      <property name="geometry">
       <rect>
-       <x>220</x>
+       <x>200</x>
        <y>0</y>
-       <width>21</width>
+       <width>31</width>
        <height>24</height>
       </rect>
      </property>
@@ -301,7 +301,7 @@ background-color:transparent;
      <x>0</x>
      <y>0</y>
      <width>302</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -323,6 +323,15 @@ background-color:transparent;
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="floatable">
+    <bool>true</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
