--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -80,7 +80,7 @@
      <string/>
     </property>
     <property name="placeholderText">
-     <string>The full URL here</string>
+     <string>Insert URL here</string>
     </property>
    </widget>
    <widget class="QPushButton" name="stopButton">
@@ -301,7 +301,7 @@ background-color:transparent;
      <x>0</x>
      <y>0</y>
      <width>302</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
