Tweaked UI a bit, added folder chooser, locked default save edit field so it's only editable from the folder chooser, added About QT menu entry and dialog, made the buttons bigger and better looking

--- a/src/res.qrc
+++ b/src/res.qrc
@@ -4,5 +4,6 @@
         <file>cog.png</file>
         <file>stop.png</file>
         <file>script_save.png</file>
+        <file>folder.png</file>
     </qresource>
 </RCC>
