--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -66,7 +66,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>251</width>
+      <width>241</width>
       <height>31</height>
      </rect>
     </property>
@@ -103,32 +103,11 @@
       <normaloff>:/icons/stop.png</normaloff>:/icons/stop.png</iconset>
     </property>
    </widget>
-   <widget class="QProgressBar" name="progressBar">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>281</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background:none;
-background-color:transparent;
-</string>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-    <property name="format">
-     <string/>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
+      <y>50</y>
       <width>281</width>
       <height>181</height>
      </rect>
@@ -136,11 +115,17 @@ background-color:transparent;
     <property name="title">
      <string>Settings</string>
     </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
     <widget class="QSpinBox" name="viewportWidth">
      <property name="geometry">
       <rect>
        <x>180</x>
-       <y>30</y>
+       <y>40</y>
        <width>81</width>
        <height>23</height>
       </rect>
@@ -159,7 +144,7 @@ background-color:transparent;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>30</y>
+       <y>40</y>
        <width>101</width>
        <height>21</height>
       </rect>
@@ -172,7 +157,7 @@ background-color:transparent;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>90</y>
+       <y>100</y>
        <width>151</width>
        <height>21</height>
       </rect>
@@ -185,17 +170,20 @@ background-color:transparent;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>110</y>
-       <width>241</width>
-       <height>23</height>
+       <y>120</y>
+       <width>201</width>
+       <height>31</height>
       </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>60</y>
+       <y>70</y>
        <width>91</width>
        <height>21</height>
       </rect>
@@ -208,7 +196,7 @@ background-color:transparent;
      <property name="geometry">
       <rect>
        <x>180</x>
-       <y>60</y>
+       <y>70</y>
        <width>81</width>
        <height>24</height>
       </rect>
@@ -238,7 +226,7 @@ background-color:transparent;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>140</y>
+       <y>160</y>
        <width>241</width>
        <height>21</height>
       </rect>
@@ -253,7 +241,7 @@ background-color:transparent;
        <x>230</x>
        <y>0</y>
        <width>31</width>
-       <height>24</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="toolTip">
@@ -276,7 +264,7 @@ background-color:transparent;
        <x>200</x>
        <y>0</y>
        <width>31</width>
-       <height>24</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="toolTip">
@@ -292,7 +280,51 @@ background-color:transparent;
       <iconset resource="res.qrc">
        <normaloff>:/icons/cog.png</normaloff>:/icons/cog.png</iconset>
      </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
+    <widget class="QPushButton" name="chooseDirBtn">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>120</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="toolTip">
+      <string>Choose a Default Save Location</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="res.qrc">
+       <normaloff>:/icons/folder.png</normaloff>:/icons/folder.png</iconset>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>240</y>
+      <width>281</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:none;
+background-color:transparent;
+</string>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+    <property name="format">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -315,9 +347,10 @@ background-color:transparent;
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
-     <string>Help</string>
+     <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout"/>
+    <addaction name="actionAbout_Qt"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menuAbout"/>
@@ -345,18 +378,40 @@ background-color:transparent;
    </property>
   </action>
   <action name="actionSave_Settings">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/icons/script_save.png</normaloff>:/icons/script_save.png</iconset>
+   </property>
    <property name="text">
     <string>Save Settings</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
   </action>
   <action name="actionLoad_Settings">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/icons/cog.png</normaloff>:/icons/cog.png</iconset>
+   </property>
    <property name="text">
     <string>Load Settings</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>About QWSnapshot...</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About Qt...</string>
    </property>
   </action>
  </widget>
